--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/icons/favicon-{{ favicon }}.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-{{ favicon }}.png"/>
+  <link rel="shortcut icon" href="/icons/favicon-{{ page.favicon }}.ico"/>
+  <link rel="apple-touch-icon" href="/icons/icon-{{ page.favicon }}.png"/>
   <title>{% if page.title %}{{ page.title }}{% else %}{{ page.subdomain }}.{{ site.domain }}{% endif %}</title>
-  <!-- Include CSS directly, so that we get always get pretty display
-       iff we have content, no matter what other requessts are broken. -->
+  {% comment %}Include CSS directly, so that we get always get pretty display iff we have content, no matter what other requests are broken.{% endcomment %}
   <style>{% include style.css %}</style>
+  <style>body { background: {% if page.background %}{{ page.background }}{% else %}gray{% endif %}; }</style>
 </head>
 <body>
 {{ content }}
