--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" href="/icons/icon-{{ page.favicon }}.png"/>
   <title>{% if page.title %}{{ page.title }}{% else %}{{ page.subdomain }}.{{ site.domain }}{% endif %}</title>
   {% comment %}Include CSS directly, so that we get always get pretty display iff we have content, no matter what other requests are broken.{% endcomment %}
-  <style>{% include style.css %}</style>
+  <link rel="stylesheet" href="/style.css">
   <style>body { background: {% if page.background %}{{ page.background }}{% else %}gray{% endif %}; }</style>
 </head>
 <body>
