Initial move of page metadata to YAML

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,5 +10,14 @@
 </head>
 <body>
 {{ content }}
+
+{% if site.data.subdomains[page.subdomain] %}
+    {% if site.data.subdomains[page.subdomain].description %}
+        <div id="footer">
+          {{ site.data.subdomains[page.subdomain].description }}
+        </div>
+    {% endif %}
+{% endif %}
+
 </body>
 </html>
