--- a/domains/misc/badssl.com/index.css
+++ b/domains/misc/badssl.com/index.css
@@ -24,6 +24,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 4px;
+  box-sizing: border-box;
 }
 
 h2,
