--- a/domains/misc/badssl.com/index.css
+++ b/domains/misc/badssl.com/index.css
@@ -69,7 +69,7 @@ div.group {
 }
 
 #links a {
-  padding: 8px;
+  padding: 12px 8px;
   box-shadow: 0 -1px 0 #e0e0e0,0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
 
   text-align: left;
@@ -87,7 +87,7 @@ div.group {
 hr {
   visibility: hidden;
   margin: 0;
-  margin-top: 8px;
+  margin-top: 16px;
 }
 
 #links a .icon {
