--- a/domains/misc/badssl.com/index.css
+++ b/domains/misc/badssl.com/index.css
@@ -25,6 +25,7 @@ body {
   align-items: center;
   justify-content: center;
   padding-top: 4px;
+  margin-bottom: 0.5em;
   box-sizing: border-box;
 }
 
