--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% if page.no-favicon %}<!-- No favicon -->{% else %}<link rel="shortcut icon" href="/icons/favicon-{{ page.favicon }}.ico"/>
   <link rel="apple-touch-icon" href="/icons/icon-{{ page.favicon }}.png"/>{% endif %}
